# auto_typing

./: README.md  pyproject.toml
auto_type/: main.py
example_inputs/: bubble.txt  fitness.txt  yakko.txt
tests/: test_auto_type.py
