[tool.poetry]
name = "auto-type"
version = "0.1.0"
description = ""
authors = ["Collin Bolles <collinbolles@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keyboard = "^0.13.5"
flake8 = "^3.7.9"
jedi = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
main = "auto_type.main:main"
